--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
         <ul class="todo-list"></ul>
         
-        <script src="js/todos.js"></script>
+        <script src="js/services/todo.service.js"></script>
+        <script src="js/todo.controller.js"></script>
     </body>
 </html>
