--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
         <title>todos</title>
     </head>
     <body onload="onInit()">
-        <h1>Let's Todo Today</h1>
+        <header>
+            <h1>Let's Todo Today</h1>
+        </header>
 
-        <form onsubmit="onAddTodo(event)">
-            <input type="text" placeholder="What todo?">
-            <button>Add a Todo</button>
-        </form>
-
-        <ul class="todo-list"></ul>
+        <main>
+            <form class="add-todo" onsubmit="onAddTodo(event)">
+                <input type="text" placeholder="What todo?">
+                <button>Add a Todo</button>
+            </form>
+    
+            <ul class="todo-list"></ul>
+        </main>
         
+        <footer>
+            <p>Coffeerights 2024</p>
+        </footer>
+
         <script src="js/services/todo.service.js"></script>
         <script src="js/todo.controller.js"></script>
     </body>
