Basic todo details implementation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             </form>
     
             <ul class="todo-list"></ul>
+
+            <div class="modal hidden">
+                <pre></pre>
+                <button onclick="onHideModal()">x</button>
+            </div>
         </main>
         
         <footer>
