Refactor details modal to use dialog element

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
     
             <ul class="todo-list"></ul>
 
-            <div class="modal hidden">
-                <pre></pre>
-                <button onclick="onHideModal()">x</button>
-            </div>
+            <dialog class="modal">
+                <form method="dialog">
+                    <pre></pre>
+                    <button>x</button>
+                </form>
+            </dialog>
         </main>
         
         <footer>
