--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
         
         <footer>
             <p>Coffeerights 2024</p>
+            <p>
+                <span>Total:</span>
+                <span class="total">0</span>
+                <span>Active:</span>
+                <span class="active">0</span>
+                <span>Completed:</span>
+                <span class="completed">0</span>
+            </p>
         </footer>
 
         <script src="js/services/todo.service.js"></script>
