Add todo factory function & related utils

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             </p>
         </footer>
 
+        <script src="js/services/util.service.js"></script>
         <script src="js/services/todo.service.js"></script>
         <script src="js/todo.controller.js"></script>
     </body>
