--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </footer>
 
         <script src="js/services/util.service.js"></script>
+        <script src="js/services/storage.service.js"></script>
         <script src="js/services/todo.service.js"></script>
         <script src="js/todo.controller.js"></script>
     </body>
